--- a/.github/workflows/slides.yml
+++ b/.github/workflows/slides.yml
@@ -43,7 +43,7 @@ jobs:
 
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: docs/slides/dist
 
   deploy:
     environment:
