improve early exit if no documents need to be indexed. allowing filtering 'to be indexed' documents by path

--- a/src/Resources/config/pimcore/messenger.yaml
+++ b/src/Resources/config/pimcore/messenger.yaml
@@ -12,8 +12,8 @@ framework:
       scheduler: 'doctrine://default?queue_name=scheduler'
       elastica_bridge_populate:
         dsn: 'sync://'
-        failure_transport: 'elastica_bridge_failed'
-      elastica_bridge_failed: 'doctrine://default?queue_name=elastica_bridge_failed'
+        failure_transport: 'elastica_bridge_index_failed'
+      elastica_bridge_index_failed: 'doctrine://default?queue_name=elastica_bridge_index_failed'
     routing:
       Valantic\ElasticaBridgeBundle\Messenger\Message\RefreshElement: elastica_bridge_index
       Valantic\ElasticaBridgeBundle\Messenger\Message\RefreshElementInIndex: elastica_bridge_index
