--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php: [ '8.1', '8.2' ]
+        php: [ '8.1', '8.2', '8.3' ]
         pimcore: [ '^11.0' ]
         stability: [ prefer-lowest, prefer-stable ]
 
