--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,9 +14,14 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ ubuntu-latest ]
-        php: [ '8.1', '8.2', '8.3' ]
-        pimcore: [ '^11.0' ]
+        php: [ '8.2', '8.3', '8.4' ]
+        pimcore: [ '^11.0', '^12.0' ]
         stability: [ prefer-lowest, prefer-stable ]
+        exclude:
+          - php: '8.2'
+            pimcore: '^12.0'
+          - php: '8.4'
+            pimcore: '^11.0'
 
     steps:
       - name: Checkout code
@@ -58,7 +63,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 8.1
+          php-version: 8.2
           extensions: curl
           coverage: xdebug
 
