--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
   "description": "Elastica bridge for Pimcore",
   "type": "pimcore-bundle",
   "require": {
-    "php": "^8.1",
+    "php": "^8.2",
     "ext-json": "*",
-    "pimcore/pimcore": "^11.0",
+    "pimcore/pimcore": "^11.0 || ^12.0",
     "psr/log": "^3.0",
     "ruflin/elastica": "^8.0.0",
-    "symfony/console": "^6.2",
-    "symfony/lock": "^6.2"
+    "symfony/console": "^6.2 || ^7.0",
+    "symfony/lock": "^6.2 || ^7.0"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.8.3",
