--- a/phpstan.neon
+++ b/phpstan.neon
@@ -12,4 +12,5 @@ parameters:
     treatPhpDocTypesAsCertain: false
 
     ignoreErrors:
-        - '#Call to an undefined method Symfony\\Component\\Config\\Definition\\Builder\\NodeDefinition::children\(\).#'
+        -
+            identifier: arrayFilter.strict
