--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,7 +1,7 @@
 name: pimcore-elastica-bridge
 type: php
 docroot: ""
-php_version: "8.2"
+php_version: "8.3"
 webserver_type: nginx-fpm
 xdebug_enabled: false
 additional_hostnames: []
@@ -14,6 +14,7 @@ composer_version: "2"
 web_environment: []
 corepack_enable: false
 omit_containers: [db]
+webimage_extra_packages: ['php${DDEV_PHP_VERSION}-pcov']
 
 # Key features of DDEV's config.yaml:
 
