--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 /.idea/
 /.vscode/
 /vendor/
-/vendor-bin/*/vendor
 /node_modules/
 .DS_STORE
 /.php_cs.cache
 .php-cs-fixer.cache
 /composer.lock
+.phpunit.cache
+coverage
